deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portofolio
  namespace: beta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-portofolio
  template:
    metadata:
      labels:
        app: my-portofolio
    spec:
      containers:
      - name: my-portofolio
        image: mfaizfatah/my-portofolio:beta
        ports:
        - containerPort: 80
