service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-portofolio
  namespace: beta
spec:
  type: ClusterIP
  selector:
    app: my-portofolio
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
