ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-portofolio
  namespace: beta
spec:
  backend:
    serviceName: my-portofolio
    servicePort: 8080
